// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockDataForm should add variations to schema 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="SelectWidget"
        >
          [["default","Default"],["extra","Extra"]]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BlockDataForm should does not add variations to schema when unneeded 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      />
    </div>
  </div>
</div>
`;

exports[`BlockDataForm should does not add variations when only one variation 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      />
    </div>
  </div>
</div>
`;
